--- a/thankyou.html
+++ b/thankyou.html
@@ -1,41 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <meta charset="UTF-8">
-<title>Thank You</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Thank You | Shwet Shiva Printing Services</title>
+
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Animations -->
 <style>
-body {
-  background:#f8fafc;
-  font-family:Arial, sans-serif;
-  text-align:center;
-  padding-top:80px;
-}
-.box {
-  background:white;
-  display:inline-block;
-  padding:40px;
-  border-radius:12px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.1);
-}
-h1 { color:#2563eb; }
-p { color:#333; margin-top:10px; }
-a {
-  display:inline-block;
-  margin-top:18px;
-  padding:10px 20px;
-  background:#2563eb;
-  color:white;
-  text-decoration:none;
-  border-radius:8px;
-}
+    .fade-in { animation: fadeIn 1.2s ease-in-out; }
+    @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+    .slide-up { animation: slideUp 0.9s ease-out; }
+    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
+                         to { transform:translateY(0); opacity:1; } }
 </style>
 </head>
-<body>
-<div class="box">
-  <h1>Thank You!</h1>
-  <p>Your message has been successfully submitted.</p>
-  <a href="index.html">Return to Home</a>
-</div>
+
+<body class="bg-gray-50">
+
+<!-- ===================================================
+ NAVIGATION (same as your site)
+==================================================== -->
+<header class="sticky top-0 bg-white shadow z-50">
+    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
+
+        <!-- Logo -->
+        <a href="index.html" class="flex items-center space-x-3">
+            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">
+                SS
+            </div>
+            <div>
+                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
+                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
+            </div>
+        </a>
+
+        <!-- Desktop Menu -->
+        <div class="hidden md:flex space-x-8 font-semibold">
+
+            <a href="index.html" class="hover:text-blue-600">Home</a>
+
+            <div class="relative group cursor-pointer">
+                <span class="hover:text-blue-600">Products</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-48 p-3 space-y-2">
+                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
+                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
+                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
+                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
+                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
+                </div>
+            </div>
+
+            <a href="services.html" class="hover:text-blue-600">Services</a>
+
+            <div class="relative group cursor-pointer">
+                <span class="hover:text-blue-600">Company</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-40 p-3 space-y-2">
+                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
+                    <a href="contact.html" class="block hover:text-blue-600">Contact</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Mobile Menu -->
+        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
+    </nav>
+
+    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
+        <a href="index.html" class="block py-2">Home</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium">Products</summary>
+            <div class="pl-4 space-y-1">
+                <a href="business-cards.html">Business Cards</a>
+                <a href="brochures.html">Brochures</a>
+                <a href="banners.html">Banners</a>
+                <a href="packaging.html">Packaging</a>
+                <a href="labels.html">Labels</a>
+            </div>
+        </details>
+
+        <a href="services.html" class="block py-2">Services</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium">Company</summary>
+            <div class="pl-4 space-y-1">
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </details>
+    </div>
+</header>
+
+<script>
+document.getElementById("mobileBtn").onclick = () => {
+    document.getElementById("mobileMenu").classList.toggle("hidden");
+};
+</script>
+
+<!-- ===================================================
+  THANK YOU SECTION
+==================================================== -->
+<section class="flex items-center justify-center min-h-[70vh] px-6 fade-in">
+    <div class="bg-white shadow-xl rounded-2xl p-10 max-w-xl text-center slide-up">
+
+        <div class="text-green-600 text-6xl font-bold mb-4">✔</div>
+
+        <h1 class="text-4xl font-extrabold text-blue-700">Thank You!</h1>
+        <p class="mt-4 text-lg text-gray-700">
+            Your message has been successfully submitted.<br>
+            Our team will contact you shortly.
+        </p>
+
+        <a href="index.html"
+           class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white px-8 py-3 rounded-lg font-bold shadow-md">
+           Return to Home
+        </a>
+    </div>
+</section>
+
+<!-- ===================================================
+ FOOTER
+==================================================== -->
+<footer class="bg-gray-900 text-gray-300 py-10">
+    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
+            <p>Premium printing services with fast delivery & top quality.</p>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Products</h4>
+            <ul class="space-y-1">
+                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
+                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
+                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
+                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
+                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Contact</h4>
+            <p>Email: infoshwetshivaprinting@gmail.com</p>
+            <p>Phone: +91 80872 20081</p>
+        </div>
+
+    </div>
+</footer>
+
 </body>
 </html>
