--- a/thankyou.html
+++ b/thankyou.html
@@ -7,6 +7,18 @@
 
 <title>Thank You | Shwet Shiva Printing Services</title>
 
+<!-- SEO -->
+<meta name="description" content="Thank you for contacting Shwet Shiva Printing Services. We have received your message and will get back to you shortly.">
+<meta name="keywords" content="printing services, print shop, printing support, contact printing company, custom printing India">
+<link rel="canonical" href="https://infoshwetshivaprinting-cell.github.io/website/thankyou.html">
+
+<!-- OG Tags (Facebook, LinkedIn, WhatsApp Preview) -->
+<meta property="og:title" content="Thank You | Shwet Shiva Printing Services">
+<meta property="og:description" content="Your message has been successfully submitted. Our team will contact you soon.">
+<meta property="og:image" content="https://picsum.photos/1200/630?random=432">
+<meta property="og:url" content="https://infoshwetshivaprinting-cell.github.io/website/thankyou.html">
+<meta property="og:type" content="website">
+
 <!-- Tailwind -->
 <script src="https://cdn.tailwindcss.com"></script>
 
@@ -16,15 +28,25 @@
     @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
     .slide-up { animation: slideUp 0.9s ease-out; }
-    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
+    @keyframes slideUp { from { transform:translateY(25px); opacity:0; }
                          to { transform:translateY(0); opacity:1; } }
+
+    .zoom-hover:hover { transform: scale(1.03); transition: 0.35s ease; }
+
+    .hero-bg {
+        background-image: url('https://picsum.photos/1920/550?random=92');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
 </style>
+
 </head>
 
 <body class="bg-gray-50">
 
 <!-- ===================================================
- NAVIGATION (same as your site)
+ NAVIGATION
 ==================================================== -->
 <header class="sticky top-0 bg-white shadow z-50">
     <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
@@ -104,17 +126,28 @@ document.getElementById("mobileBtn").onclick = () => {
 </script>
 
 <!-- ===================================================
-  THANK YOU SECTION
+ HERO SECTION (Matching Contact Page)
 ==================================================== -->
-<section class="flex items-center justify-center min-h-[70vh] px-6 fade-in">
+<section class="relative fade-in">
+    <div class="hero-bg w-full h-[350px] flex items-center justify-center text-white text-center px-6 brightness-75"></div>
+
+    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
+        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">Thank You</h2>
+        <p class="mt-4 text-lg max-w-xl slide-up">We appreciate your message — our team will get back to you soon.</p>
+    </div>
+</section>
+
+<!-- ===================================================
+ THANK YOU MESSAGE BOX
+==================================================== -->
+<section class="flex items-center justify-center py-16 px-6 fade-in">
     <div class="bg-white shadow-xl rounded-2xl p-10 max-w-xl text-center slide-up">
 
         <div class="text-green-600 text-6xl font-bold mb-4">✔</div>
 
-        <h1 class="text-4xl font-extrabold text-blue-700">Thank You!</h1>
-        <p class="mt-4 text-lg text-gray-700">
-            Your message has been successfully submitted.<br>
-            Our team will contact you shortly.
+        <h1 class="text-3xl font-extrabold text-blue-700">Message Submitted Successfully!</h1>
+        <p class="mt-4 text-gray-700 text-lg">
+            We’ve received your inquiry and will respond shortly.
         </p>
 
         <a href="index.html"
