--- a/about.html
+++ b/about.html
@@ -65,6 +65,9 @@
                     <a href="banners.html" class="block hover:text-blue-600">Banners</a>
                     <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
                     <a href="labels.html" class="block hover:text-blue-600">Labels</a>
+                     <a href="wedding-cards.html" class="block hover:text-blue-600">Wedding Cards</a>
+                     <a href="invitation-cards.html" class="block hover:text-blue-600">Invitation Cards</a>
+                     <a href="office-binding.html" class="block font-semibold text-blue-600">Office Binding</a>
                 </div>
             </div>
 
@@ -189,7 +192,10 @@ document.getElementById("mobileBtn").onclick = () => {
                 <li><a href="banners.html" class="hover:text-white">Banners</a></li>
                 <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
                 <li><a href="labels.html" class="hover:text-white">Labels</a></li>
-            </ul>
+                <li><a href="wedding-cards.html" class="hover:text-white">Wedding Cards</a></li>
+                <li><a href="invitation-cards.html" class="hover:text-white">Invitation Cards</a></li>
+                <li><a href="office-binding.html" class="hover:text-white">Office Binding</a></li>
+           </ul>
         </div>
 
         <div>
