--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,11 @@
                     <a href="banners.html" class="block hover:text-blue-600">Banners</a>
                     <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
                     <a href="labels.html" class="block hover:text-blue-600">Labels</a>
-                </div>
+                   <a href="wedding-cards.html" class="block hover:text-blue-600">Wedding Cards</a>
+                    <a href="invitation-cards.html" class="block font-semibold text-blue-600">Invitation Cards</a>
+                    <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
+                
+                 </div>
             </div>
 
             <a href="services.html" class="hover:text-blue-600">Services</a>
