--- a/index.html
+++ b/index.html
@@ -49,69 +49,62 @@
 ==================================================== -->
 <header class="sticky top-0 bg-white shadow z-50">
     <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-
-        <!-- Logo -->
         <a href="index.html" class="flex items-center space-x-3">
-            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">
-                SS
-            </div>
+            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">SS</div>
             <div>
                 <h1 class="text-2xl font-bold">Shwet Shiva</h1>
                 <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
             </div>
         </a>
 
-        <!-- Desktop Menu -->
         <div class="hidden md:flex space-x-8 font-semibold">
-
             <a href="index.html" class="hover:text-blue-600">Home</a>
 
             <!-- Products Dropdown -->
             <div class="relative group cursor-pointer">
-                <span class="hover:text-blue-600">Products</span>
-
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-48 p-3 space-y-2">
+                <span class="text-blue-600">Products</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-56 p-3 space-y-2">
                     <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
                     <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
                     <a href="banners.html" class="block hover:text-blue-600">Banners</a>
                     <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
                     <a href="labels.html" class="block hover:text-blue-600">Labels</a>
-                     <a href="wedding-cards.html" class="block hover:text-blue-600">Wedding Cards</a>
-                    <a href="invitation-cards.html" class="block font-semibold text-blue-600">Invitation Cards</a>
+                    <hr>
+                    <a href="wedding-cards.html" class="block font-semibold text-blue-600">Wedding Cards</a>
+                    <a href="invitation-cards.html" class="block hover:text-blue-600">Invitation Cards</a>
                     <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
-                
                 </div>
             </div>
 
             <a href="services.html" class="hover:text-blue-600">Services</a>
 
-            <!-- Company Dropdown -->
             <div class="relative group cursor-pointer">
                 <span class="hover:text-blue-600">Company</span>
-
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-40 p-3 space-y-2">
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-44 p-3 space-y-2">
                     <a href="about.html" class="block hover:text-blue-600">About Us</a>
                     <a href="contact.html" class="block hover:text-blue-600">Contact</a>
                 </div>
             </div>
         </div>
 
-        <!-- Mobile Menu Button -->
         <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
     </nav>
 
-    <!-- Mobile Menu -->
+    <!-- Mobile -->
     <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
         <a href="index.html" class="block py-2">Home</a>
 
         <details class="py-2">
-            <summary class="cursor-pointer font-medium">Products</summary>
+            <summary class="cursor-pointer font-medium text-blue-600">Products</summary>
             <div class="pl-4 space-y-1">
-                <a href="business-cards.html" class="block">Business Cards</a>
-                <a href="brochures.html" class="block">Brochures</a>
-                <a href="banners.html" class="block">Banners</a>
-                <a href="packaging.html" class="block">Packaging</a>
-                <a href="labels.html" class="block">Labels</a>
+                <a href="business-cards.html">Business Cards</a>
+                <a href="brochures.html">Brochures</a>
+                <a href="banners.html">Banners</a>
+                <a href="packaging.html">Packaging</a>
+                <a href="labels.html">Labels</a>
+                <a href="wedding-cards.html">Wedding Cards</a>
+                <a href="invitation-cards.html">Invitation Cards</a>
+                <a href="office-binding.html">Office Binding</a>
             </div>
         </details>
 
